labs/networking/ingress/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-aks
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - arturoqu525.canadacentral.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: arturoqu525.canadacentral.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: service-tracker-ui
          servicePort: 8080
